--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,21 @@ services:
     container_name: vod-app
     depends_on:
       - db
+      - redis
     environment:
       PGHOST: localhost
       PGUSER: vodusr
       PGPASSWORD: pass@1886
       PGDATABASE: vodb
+      REDIS_URL: redis://redis:6379
+      JWT_SECRET: gc9,&jZ)=|;U_6|@8\U96B
+    networks:
+      - vod-net
+
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
     networks:
       - vod-net
 
