--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
 services:
-  db:
-    image: postgres:15
-    container_name: vod-db
-    restart: always
-    environment:
-      POSTGRES_USER: vodusr
-      POSTGRES_PASSWORD: pass@1886
-      POSTGRES_DB: vodb
+  postgres:
+    image: postgres:16-alpine
+    hostname: postgres
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres 
+      POSTGRES_PASSWORD: pt_@8\U96B
+      POSTGRES_DB: vodb
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql16/data
     networks:
       - vod-net
 
@@ -18,16 +17,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: vod-app
+    ports:
+      - "8800:8800"
     depends_on:
-      - db
+      - postgres
       - redis
     environment:
-      PGHOST: localhost
-      PGUSER: vodusr
-      PGPASSWORD: pass@1886
+      PGHOST: postgres 
+      PGUSER: postgres 
+      PGPASSWORD: pt_@8\U96B
       PGDATABASE: vodb
-      REDIS_URL: redis://redis:6379
+      REDIS_HOST: redis
+      REDIS_PORT:  6379 
       JWT_SECRET: gc9,&jZ)=|;U_6|@8\U96B
     networks:
       - vod-net
